--- a/also.html
+++ b/also.html
@@ -22,74 +22,49 @@
 
         </div>
 
-        <div>
-            <p><a href="<{$webshop->getUrl()|escape}>/basket" class="basket_link">Til kassen »</a></p>
-            <p><a href="<{$product->getUrl()|escape}>">« Tilbage</a></p>
-        </div>
+		<div>
+			<p><a href="<{$product->getUrl()|escape}>">« Tilbage</a> <a href="<{$webshop->getUrl()|escape}>/basket" class="basket_link btn btn-success">Gå til kassen »</a></p>
+		</div>
 
     </div>
 
     <div class="clear"></div>
 
-    <{assign var="products" value=$product->getAlsoBought(4)}>
-    <{if $products}>
-        <div>
-            <h2>Andre der købte den købte også:</h2>
-                <{section name="i" loop=$products}>
-                    <div class="pct25 center">
-                        <{assign var="image" value=$products[i]->getImage()}>
-                        <{if $image}>
-                            <a href="<{$products[i]->getRemoteUrl()|escape}>"><img src="<{$image->getSrc(150, 150, 'fit')}>" alt="<{$image->getDescription()|escape}>" title="<{$image->getDescription()|escape}>" <{$image->getHtmlSize(150, 150, 'fit')}>/></a>
-                        <{/if}>
 
-                        <h3><a href="<{$products[i]->getRemoteUrl()|escape}>"><{$products[i]->getName()|escape}></a></h3>
+	<{assign var="products" value=$product->getAlsoBought(4)}>
+	<{if $products}>
+		<section id="highlighted-products">
+			<h2 class="section-header">Andre der købte den købte også:</h2>
+			<div class="container"><div class="row">
+			<ul class="product-list" itemscope itemtype="http://schema.org/ItemList">
 
-                        <{if $products[i]->getSalePrice()}>
-                            <p><a href="<{$products[i]->getRemoteUrl()|escape}>"><small>Førpris: <del><{$products[i]->getPrice()|number_format:2:",":"."}> <{$webshop->getCurrency()}>.</del></small></a></p>
-                            <p><a href="<{$products[i]->getRemoteUrl()|escape}>"><small>Nu: <{$products[i]->getSalePrice()|number_format:2:",":"."}> <{$webshop->getCurrency()}>.</small></a></p>
-                        <{else}>
-                            <p><a href="<{$products[i]->getRemoteUrl()|escape}>"><small>Pris: <{$products[i]->getRealPrice()|number_format:2:",":"."}> <{$webshop->getCurrency()}>.</small></a></p>
-                        <{/if}>
+				<{section name="i" loop=$products start=0 max=8}>
+				<{include file="_include_inner-product.html" product=$products[i]}>
+				<{/section}>
 
-                        <br/>
-
-                        <p><strong><a href="<{$products[i]->getRemoteUrl()|escape}>">Gå til varen »</a></strong></p>
-
-                    </div>
-                <{/section}>
-        </div>
-    <{/if}>
+			</ul>
+			</div></div>
+		</section>
+	<{/if}>
 
     <div class="clear"></div>
 
-    <{assign var="products" value=$product->getRelatedProducts(4)}>
-    <{if $products}>
-        <div>
-            <h2>Relaterede varer:</h2>
-                <{section name="i" loop=$products}>
-                    <div class="pct25 center">
-                        <{assign var="image" value=$products[i]->getImage()}>
-                        <{if $image}>
-                            <a href="<{$products[i]->getRemoteUrl()|escape}>"><img src="<{$image->getSrc(150, 150, 'fit')}>" alt="<{$image->getDescription()|escape}>" title="<{$image->getDescription()|escape}>" <{$image->getHtmlSize(150, 150, 'fit')}>/></a>
-                        <{/if}>
+	<{assign var="products" value=$product->getRelatedProducts(4)}>
+	<{if $products}>
+		<section id="highlighted-products">
+			<h2 class="section-header">Andre der købte den købte også:</h2>
+			<div class="container"><div class="row">
+			<ul class="product-list" itemscope itemtype="http://schema.org/ItemList">
 
-                        <h3><a href="<{$products[i]->getRemoteUrl()|escape}>"><{$products[i]->getName()|escape}></a></h3>
+				<{section name="i" loop=$products start=0 max=8}>
+				<{include file="_include_inner-product.html" product=$products[i]}>
+				<{/section}>
 
-                        <{if $products[i]->getSalePrice()}>
-                            <p><a href="<{$products[i]->getRemoteUrl()|escape}>"><small>Førpris: <del><{$products[i]->getPrice()|number_format:2:",":"."}> <{$webshop->getCurrency()}>.</del></small></a></p>
-                            <p><a href="<{$products[i]->getRemoteUrl()|escape}>"><small>Nu: <{$products[i]->getSalePrice()|number_format:2:",":"."}> <{$webshop->getCurrency()}>.</small></a></p>
-                        <{else}>
-                            <p><a href="<{$products[i]->getRemoteUrl()|escape}>"><small>Pris: <{$products[i]->getRealPrice()|number_format:2:",":"."}> <{$webshop->getCurrency()}>.</small></a></p>
-                        <{/if}>
+			</ul>
+			</div></div>
+		</section>
+	<{/if}>
 
-                        <br/>
-
-                        <p><strong><a href="<{$products[i]->getRemoteUrl()|escape}>">Gå til varen »</a></strong></p>
-
-                    </div>
-                <{/section}>
-        </div>
-    <{/if}>
 
     <div class="clear"></div>
 
