Added message both to cart and to the cart popup

--- a/_include_side-basket.html
+++ b/_include_side-basket.html
@@ -4,6 +4,8 @@
 
             <h3>Indhold i kurven</h3>
 
+            <{include file="_include_free_shipping.html"}>
+
             <form class="form-inline" role="form" id="form" method="post" action="/basket">
 
                 <ul id="basket-content-list">
