--- a/_include_inner-product.html
+++ b/_include_inner-product.html
@@ -35,7 +35,7 @@
                 <{else}>
                 <span>Produktet er i restordre:</span>
                 <ul>
-                    <li>Skriv dig op til at få besked på produktet.</li>
+                    <li>Skriv dig op til at få besked, når vi får nye på lager.</li>
                 </ul>
                 <{/if}>
             </div>
