--- a/_include_inner-product.html
+++ b/_include_inner-product.html
@@ -1,6 +1,10 @@
 <{strip}>
 <{assign var="innerproduct" value="product_cache_"|cat:$product->getProductId()}>
-<{assign var="randomttl" value=43200|mt_rand:86400}>
+<{if $settings.Caching.MaxLevetidProduktTeaser && $settings.Caching.MinLevetidProduktTeaser}>
+    <{assign var="randomttl" value=$settings.Caching.MinLevetidProduktTeaser|mt_rand:$settings.Caching.MaxLevetidProduktTeaser}>
+<{else}>
+    <{assign var="randomttl" value=43200|mt_rand:86400}>
+<{/if}>
 
 <{get_cache name=$innerproduct ttl=$randomttl assign="inner_product_cached_data"}>
 
