--- a/category.html
+++ b/category.html
@@ -1,13 +1,18 @@
 <{strip}>
 <{capture name="title"}><{$category->getName()}><{/capture}>
 <{assign var="cacheCategory" value=$category->getCategoryId()|cat:'_'|cat:$get.p}>
-<{assign var="cacheCategoryData" $category->getCategoryId()|cat:'_data_'|cat:$get.p}>
+<{assign var="cacheCategoryData" value=$category->getCategoryId()|cat:'_data_'|cat:$get.p}>
+<{if $settings.Caching.LevetidKategoriSide}>
+    <{assign var="ttl" value=$settings.Caching.LevetidKategoriSide}>
+<{else}>
+    <{assign var="ttl" value="3600"}>
+<{/if}>
 
         <div id="site" class="">
 
             <{include file="_include_header.html"}>
 
-            <{get_cache name=$cacheCategory ttl=3600 assign="cacheCategoryData"}>
+            <{get_cache name=$cacheCategory ttl=$ttl assign="cacheCategoryData"}>
 
             <{if $cacheCategoryData}><{$cacheCategoryData}>
 
