Added caching on pages

--- a/page.html
+++ b/page.html
@@ -1,10 +1,18 @@
-<{assign var="images" value=$page->getImages()}>
-
-<{strip}><{capture name="title"}><{$page->getHeadline()}><{/capture}>
+<{strip}>
+<{capture name="title"}><{$page->getHeadline()}><{/capture}>
+<{assign var="cachePage" value=$page->getPageId()}>
+<{assign var="cachePageData" value=$page->getPageId()|cat:'_data'}>
+<{assign var="ttl" value="86400"}>
 
     <div id="site" class="staticpage">
         <{include file="_include_header.html"}>
+        <{get_cache name=$cachePage ttl=$ttl assign="cachePageData"}>
+        <{if $cachePageData}>
+            <{$cachePageData}>
+        <{else}>
+        <{cache name=$cachePage}>
         <section id="sitecontent">
+            <{assign var="images" value=$page->getImages()}>
             <{if $images|@count > 0}>
             <section id="brandidentity" style="background-image: url(<{$images[0]->getSrc(1000, 1000, 'fit')}>);">
                 <div id="brandidentity-content">
@@ -60,6 +68,8 @@
             </section>
 
         </section><!--/#sitecontent-->
+        <{/cache}>
+        <{/if}>
 
         <{include file="_include_footer.html"}>
 
