--- a/_include_mainnavigation.html
+++ b/_include_mainnavigation.html
@@ -1,4 +1,15 @@
 <{strip}>
+<{assign var="ttl" value="3600"}>
+<{get_cache name="shoporama_manu" ttl=$ttl assign="shoporama_menu_data"}>
+
+<{if $shoporama_menu_data}>
+
+    <{$shoporama_menu_data}>
+
+<{else}>
+
+<{cache name="shoporama_menu"}>
+
 <nav id="sitenav" class="" aria-label="Menu" role="navigation">
     <div class="hidden-md hidden-lg" id="mobile-search">
         <form action="<{$webshop->getUrl()|escape}>/search">
