Added caching on navigation and footer

--- a/_include_footer.html
+++ b/_include_footer.html
@@ -1,4 +1,13 @@
-<{strip}><footer id="sitefoot">
+<{strip}>
+<{assign var="ttl" value="3600"}>
+<{get_cache name="shoporama_footer" ttl=$ttl assign="shoporama_footer_data"}>
+
+<{if $shoporama_footer_data}>
+    <{$shoporama_footer_data}>
+<{else}>
+    <{cache name="shoporama_footer"}>
+
+<footer id="sitefoot">
     <div id="sitefoot-head">
         <div class="container"><div class="row"><div class="col-xs-12">
             <{if $settings.Betalingskort.Dankort == "ja"}><img src="<{$theme_url}>/img/epay-logo-pack/dankort_22.gif" alt="Dankort"><{/if}>
@@ -99,5 +108,6 @@
     </div>
     </div></div><!--/.row /.container-->
 </footer><!--/#sitefoot-->
-
+<{/cache}>
+<{/if}>
 <{/strip}>
