--- a/_include_addtocart.html
+++ b/_include_addtocart.html
@@ -25,9 +25,10 @@
 									<{assign var="values" value=$b_attr[j]->getValues()}>
 									<select id="attr_<{$b_product->getProductId()}>" name="b_attributes[<{$b_product->getProductId()}>][<{$b_attr[j]->getAttributeId()}>]" required="required">
 									<{section name="k" loop=$values}>
-										<{if $b_product->getInStock($b_attr[j]->getAttributeId(), $values[k]->getAttributeValueId()) > 0}>
+										<{assign var="in_stock" value=$b_product->getInStock($b_attr[j]->getAttributeId(), $values[k]->getAttributeValueId())}>
+										<{if $in_stock > 0}>
 											<option value="<{$values[k]->getAttributeValueId()}>">
-												<{$values[k]->getVal()|escape}>
+												<{$values[k]->getVal()|escape}> (<{$in_stock|escape}> på lager)
 											</option>
 										<{/if}>
 									<{/section}>
@@ -51,9 +52,11 @@
 					            		<option value="" disabled="disabled" selected>Vælg variant</option>
 					                    <{section name="k" loop=$values}>
 					                        <{assign var="attribute_price" value=$product->getAttributePrice($values[k]->getAttributeValueId())}>
-					                        <{if $product->getInStock($attr[j]->getAttributeId(), $values[k]->getAttributeValueId()) > 0}>
+											<{assign var="in_stock" value=$product->getInStock($attr[j]->getAttributeId(), $values[k]->getAttributeValueId())}>
+
+											<{if $in_stock > 0}>
 					                        	<option value="<{$values[k]->getAttributeValueId()}>" data-stockamount="<{$product->getInStock($attr[j]->getAttributeId(), $values[k]->getAttributeValueId())}>">
-					                                <{$values[k]->getVal()|escape}>
+					                                <{$values[k]->getVal()|escape}> (<{$in_stock|escape}> på lager)
 					                                <{if $attribute_price}>
 					                                    &nbsp;(<{$attribute_price|number_format:2:",":"."}> <{$webshop->getCurrency()}>)
 					                                <{/if}>
@@ -100,7 +103,6 @@
 			</span>
 		</div>
 	</form>
-
 
 <{/if}>
 
