Fixed a little bit on sizing

--- a/_include_brandwall.html
+++ b/_include_brandwall.html
@@ -9,7 +9,7 @@
                 <{assign var="images" value=$landingpages[i]->getImages()}>
                 <{if $images}>
                     <{section name="j" loop=$images start=0 max=1}>
-                        <img src="<{$images[j]->getSrc(235,85,'box')}>">
+                        <img src="<{$images[j]->getSrc(235, 120, 'fit')}>">
                     <{/section}>
                 <{/if}>
             </a>
