Tried new approach

--- a/also.html
+++ b/also.html
@@ -5,7 +5,7 @@
         <{if $product}>
         <section id="page-content">
             <{include file="_include_breadcrumbs.html"}>
-            <div class="row"><div class="col-xs-12 col-md-8 col-md-offset-2">
+            <div class="row product-added"><div class="col-xs-12 col-md-8 col-md-offset-2">
                 <{assign var="image" value=$product->getImage()}>
 
                 <div class="col-xs-12 col-sm-8 col-md-9 left">
