--- a/also.html
+++ b/also.html
@@ -27,14 +27,13 @@
                 </div>
             </div></div>
 
-            <div class="row"><div class="col-xs-12 col-md-8 col-md-offset-2">
             <{if $shipping_country && intval($shipping_country->getFreeAbove())}>
+            <div class="row free-shipping"><div class="col-xs-12 col-md-8 col-md-offset-2">
                 <{if $shipping_country->getFreeAbove() gt $price}>
-                    <p class="alert alert-info" role="alert"><span class="glyphicon glyphicon glyphicon-star-empty" aria-hidden="true"></span> Der er gratis fragt hvis du køber for mere end <{$shipping_country->getFreeAbove()|number_format:0:",":"."}> <{$webshop->getCurrency()|escape}>.&nbsp;
-                        Få gratis fragt ved at købe for <{math equation="x - y" x=$shipping_country->getFreeAbove() y=$price}> <{$webshop->getCurrency()|escape}> mere.<p>
+                    <p><span class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></span> Få gratis fragt ved at købe for <{math equation="x - y" x=$shipping_country->getFreeAbove() y=$price}> <{$webshop->getCurrency()|escape}> mere.<p>
                 <{/if}>
-            <{/if}>
             </div></div>
+            <{/if}>
 
             <{include file="_include_page-persuasion.html"}>
 
