--- a/_include_free-shipping.html
+++ b/_include_free-shipping.html
@@ -1,7 +1,9 @@
 <{if $shipping_country && intval($shipping_country->getFreeAbove())}>
-<div class="row free-shipping"><div class="col-xs-12 col-md-8 col-md-offset-2">
-    <{if $shipping_country->getFreeAbove() gt $price}>
-    <p><span class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></span> Få gratis fragt ved at købe for <{math equation="x - y" x=$shipping_country->getFreeAbove() y=$price}> <{$webshop->getCurrency()|escape}> mere.<p>
+    <{math assign="buy_more" equation="x - y" x=$shipping_country->getFreeAbove() y=$price}>
+    <{math assign="trigger_price" equation="price * when_to_trigger" price=$total_price when_to_trigger="1"}>
+    <{if $trigger_price gt $buy_more}>
+    <div class="row free-shipping"><div class="col-xs-12 col-md-8 col-md-offset-2">
+        <p><span class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></span> Få gratis fragt ved at købe for <{$buy_more}> <{$webshop->getCurrency()|escape}> mere.<p>
+    </div></div>
     <{/if}>
-</div></div>
 <{/if}>
