--- a/product.html
+++ b/product.html
@@ -1,10 +1,6 @@
 <{strip}>
 <{capture name="title"}><{$product->getName()}><{/capture}>
-<{if $settings.globale.NyhedIndtil}>
-<{assign var="news_until" value=$settings.globale.NyhedIndtil}>
-<{else}>
-<{assign var="news_until" value="480}>
-<{/if}>
+<{assign var="news_until" value=$settings.globale.NyhedIndtil|default:480}>
 <{assign var="images" value=$product->getImages()}>
 
 <div id="site" class="productpage">
@@ -21,11 +17,21 @@
                        <img src="<{$images[j]->getSrc(770, 770, 'fit')}>" class="lazyOwl" alt="<{$images[j]->getDescription()|escape}>"  itemprop="image">
                        <{/section}>
                    </div>
-               </div>
+                    <{if $product->getSalePrice() > 0}>
+                        <div class="product-highlight offer">
+                            <{math assign="pricedif" equation='a-b' a=$product->getPrice() b=$product->getSalePrice() }>
+                            <{math assign="savepercent" equation='c/d*100' c=$pricedif d=$product->getPrice()}>
+                            -<{$savepercent|number_format:0}>%
+                        </div>
+                    <{elseif $product->getOnlineHours() < $news_until}>
+                        <div class="product-highlight news">NYHED</div>
+                    <{/if}>
+
+                </div>
                <div class="col-xs-12 col-sm-7 col-md-6">
                     <div id="product-info-container">
                         <h1 itemprop="name">
-                            <{$product->getName()|escape}><{if $product->getOnlineHours() < $news_until}> <span class="news">(NYHED)</span><{/if}>
+                            <{$product->getName()|escape}>
                         </h1>
                         <{if $product->getOwnId()}>
                             <div id="product-info-sku">Varenr. <{$product->getOwnId()}></div>
