--- a/_include_inner-product.html
+++ b/_include_inner-product.html
@@ -1,9 +1,5 @@
 <{strip}>
-<{if $settings.globale.NyhedIndtil}>
-    <{assign var="news_until" value=$settings.globale.NyhedIndtil}>
-<{else}>
-    <{assign var="news_until" value="480}>
-<{/if}>
+<{assign var="news_until" value=$settings.globale.NyhedIndtil|default:480}>
 <{assign var="innerproduct" value="product_cache_"|cat:$product->getProductId()}>
 <{if $settings.Caching.MaxLevetidProduktTeaser && $settings.Caching.MinLevetidProduktTeaser}>
     <{assign var="randomttl" value=$settings.Caching.MinLevetidProduktTeaser|mt_rand:$settings.Caching.MaxLevetidProduktTeaser}>
@@ -75,7 +71,6 @@
             <{elseif $product->getOnlineHours() < $news_until}>
                 <div class="product-teaser-highlight news">NYHED</div>
             <{/if}>
-
 
             <div class="product-teaser-meta">
                 <div class="product-teaser-title" itemprop="name"><{$product->getName()|escape}></div>
