--- a/_include_footer.html
+++ b/_include_footer.html
@@ -88,13 +88,7 @@
         </div>
         <div class="sitefoot-box col-xs-12 col-md-3">
             <div class="sitefoot-box-inner somelinks">
-                <{if $settings.SocialeMedieLinks.Overskrift}><h4><{$settings.SocialeMedieLinks.Overskrift}></h4><{/if}>
-                <{if $settings.SocialeMedieLinks.Facebook}><a href="<{$settings.SocialeMedieLinks.Facebook}>" class="icon-facebook someicn"></a><{/if}>
-                <{if $settings.SocialeMedieLinks.Instagram}><a href="<{$settings.SocialeMedieLinks.Instagram}>" class="icon-instagram someicn"></a><{/if}>
-                <{if $settings.SocialeMedieLinks.Pinterest}><a href="<{$settings.SocialeMedieLinks.Pinterest}>" class="icon-pinterest someicn"></a><{/if}>
-                <{if $settings.SocialeMedieLinks.GooglePlus}><a href="<{$settings.SocialeMedieLinks.GooglePlus}>" class="icon-googleplus someicn"></a><{/if}>
-                <{if $settings.SocialeMedieLinks.Twitter}><a href="<{$settings.SocialeMedieLinks.Twitter}>" class="icon-twitter someicn"></a><{/if}>
-                <{if $settings.SocialeMedieLinks.Linkedin}><a href="<{$settings.SocialeMedieLinks.Linkedin}>" class="icon-linkedin someicn"></a><{/if}>
+                <{include file="_include_socialicons.html"}>
             </div>
         </div>
     </div>
