--- a/shipping.html
+++ b/shipping.html
@@ -45,18 +45,18 @@
                 <{/if}>
 
                 <form action="" method="post" id="shippingformular">
-                    <br>
+                    <div class="form-row form-row-checkbox">
                     <{assign var="shippings" value=$webshop->getShippings()}>
                     <{section name="i" loop=$shippings}>
                         <div class="line shipping_module">
                             <input class="shipping" type="radio" module="<{$shippings[i]->getModule()|escape}>" value="<{$shippings[i]->getShippingId()}>" name="shipping_id" id="shipping<{$shippings[i]->getShippingId()}>" <{if $session_del.shipping_id == $shippings[i]->getShippingId()}>checked="checked"<{/if}>/>
                             <label for="shipping<{$shippings[i]->getShippingId()}>"><{$shippings[i]->getName()|escape}> <{$shippings[i]->getCost()|number_format:2:",":"."}> <{$webshop->getCurrency()}></label><br/>
                         </div>
-                    <{/section}>
+                    <{/section}
+                    </div>
 
                     <{if $shops}>
-                        <div class="clear" >
-                            <br>
+                        <div class="form-row form-row-select">
                             <label>Hvor vi du hente din pakke? <br>
                                 <select name="shop">
                                     <{section name="i" loop=$shops}>
@@ -72,10 +72,6 @@
                     <{else}>
                         <p>Ingen pakkeshops fundet</p>
                     <{/if}>
-
-                    <div class="clear"></div>
-                    <br>
-                    <br>
 
                     <input type="button" name="prev" value="&laquo; Leveringsadresse" class="btn btn-default btn-lg pull-left" onclick="history.go(-1);"/>
                     <input type="submit" name="next" value="Gå til betaling &raquo;" class="btn btn-primary btn-lg pull-right" />
