Only hide if organisation is not filled in

--- a/address.html
+++ b/address.html
@@ -93,8 +93,10 @@
                                                 $('#ean_number').val("");
                                             }
                                         });
-                                        $('#vat-number').hide();
-                                        $('#ean-number').hide();
+                                        if ($('#order_company_name').val().length === 0) {
+                                            $('#vat-number').hide();
+                                            $('#ean-number').hide();
+                                        }
                                     });
                                 </script>
                             <{/if}>
